# python-labs

./: .gitignore  Makefile  README.md  criar novo projeto.md  mkdocs.yml  pyproject.toml
_template_projeto/02-codigo/: v3_melhorado.py
docs/: guia.md  index.md
projetos/01_Calculadora de IMC/01-explicacao/: anotacoes.md  teoria.md
projetos/01_Calculadora de IMC/02-codigo/: v2_completo.py
projetos/01_Calculadora de IMC/03-teste/: test_projeto.py
projetos/01_Calculadora de IMC/docs/: index.md
projetos/02_teste1/: README.md
projetos/02_teste1/01-explicacao/: teoria.md
projetos/02_teste1/04-praticas/: exercicios.md
projetos/03_Nome_do_Seu_Projeto/: README.md
projetos/03_Nome_do_Seu_Projeto/01-explicacao/: anotacoes.md
projetos/03_Nome_do_Seu_Projeto/02-codigo/: v1_simples.py  v2_completo.py
projetos/03_Nome_do_Seu_Projeto/03-teste/: test_projeto.py
projetos/03_Nome_do_Seu_Projeto/docs/: index.md
projetos/template/: NOTAS.md  main.py
scripts/: novo_projeto.sh
