
[tool.poetry]
name = "python-labs"
version = "0.1.0"
description = "Laboratório de projetos Python com testes, lint e documentação."
authors = ["Marcio Soeiro <mandre.soeiro@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
black = "*"
mkdocs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
